--- a/Training_and_Inference.ipynb
+++ b/Training_and_Inference.ipynb
@@ -186,7 +186,7 @@
     {
       "cell_type": "code",
       "source": [
-        "get_response(config, \"People should know that AI\", temperature=0.7, top_k=10)"
+        "get_response(config, \"People should know that AI\", temperature=0.7, top_p=10)"
       ],
       "metadata": {
         "colab": {
@@ -272,8 +272,8 @@
         "  print(\"Examples:\\n\")\n",
         "  for prompt in prompts:\n",
         "      temperature = np.random.normal(0.5, 0.01)  # sample from normal distribution\n",
-        "      top_k = random.choice([10, 15, 20, None])   # select random item from the list\n",
-        "      output = get_response(config, prompt, temperature=temperature, top_k=top_k)\n",
+        "      top_p = random.choice([10, 15, 20, None])   # select random item from the list\n",
+        "      output = get_response(config, prompt, temperature=temperature, top_p=top_p)\n",
         "\n",
         "      # Format the prompt and output with appropriate colors\n",
         "      formatted_prompt = f\"{Fore.BLUE}{prompt}{Style.RESET_ALL}\"\n",
